# hugo-theme-academic-cv

./: .gitmodules  .pdm-python  Makefile  package.json  pyproject.toml
_template/: _me.j2
config/_default/: hugo.yaml  menus.yaml  params.yaml
content/: _index.md  experience.md  papers.md  patents.md
content/publications/anand-elastic-nodate/: index.md
content/publications/anand-extending-2017/: index.md
content/publications/anand-packet-optical-2019/: index.md
content/publications/anand-packet-optical-2019-1/: index.md
content/publications/anand-point-2018/: index.md
content/publications/anand-reliable-nodate/: index.md
content/publications/anand-unifying-2017/: index.md
content/publications/argyropoulos-development-1984/: index.md
content/publications/argyropoulos-facility-1983/: index.md
content/publications/argyropoulos-microprocessors-1983/: index.md
content/publications/bardalai-te-link-2019/: index.md
content/publications/dehne-construction-1992/: index.md
content/publications/dehne-construction-1994/: index.md
content/publications/hui-remote-1990/: index.md
content/publications/hui-remote-1992/: index.md
content/publications/hussain-flexe-2018/: index.md
content/publications/hussain-optical-2016/: index.md
content/publications/oommen-adaptive-1991/: index.md
content/publications/oommen-fast-1990/: index.md
content/publications/pan-encoding-2016/: index.md
content/publications/raj-service-2020/: index.md
content/publications/rao-sd-fec-2021/: index.md
data/authors/: me.yaml
(+23 files in other folders)
