[project]
name = "hugo-theme-academic-cv"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Radhakrishna Valiveti", email = "rsvaliveti@outlook.com"},
]
dependencies = ["academic>=0.11.2", "jinja-cli>=1.2.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
